Removing connection string

--- a/containers_101/appsettings.json
+++ b/containers_101/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "containers_101": "Server=localhost;Database=containers_101;TrustServerCertificate=True;User Id=sa;Password=MdNTn99nw5PxqpThM5GxT;"
+    "containers_101": ""
   },
   "Logging": {
     "LogLevel": {
